Update documentation, fix OpenAPI tag clashes and add error response schema
